# cplusplus-koans

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md
koans/1_1_translation_units/: CMakeLists.txt  broken_header.h  header_guards.cpp  header_guards.h  macro_pitfalls.cpp  macro_pitfalls.h  macro_substitution.cpp  macro_substitution.h  physical_logical_lines.cpp  physical_logical_lines.h  pragma_once_header.h  test_header_guards.cpp  test_macro_pitfalls.cpp  test_macro_substitution.cpp  test_physical_logical_lines.cpp
koans/1_2_names_scopes/: CMakeLists.txt  linkage.cpp  linkage.h  linkage_helper.cpp  name_shadowing.cpp  name_shadowing.h  namespaces.cpp  namespaces.h  scope_rules.cpp  scope_rules.h  test_linkage.cpp  test_name_shadowing.cpp  test_namespaces.cpp  test_scope_rules.cpp
koans/1_3_basic_types/: CMakeLists.txt  const_qualifier.cpp  const_qualifier.h  integral_types.cpp  integral_types.h  test_const_qualifier.cpp  test_integral_types.cpp  test_type_conversions.cpp  test_value_categories.cpp  type_conversions.cpp  type_conversions.h  value_categories.cpp  value_categories.h
koans/1_4_pointers_arrays/: CMakeLists.txt  array_decay.cpp  array_decay.h  function_pointers.cpp  function_pointers.h  pointer_arithmetic.cpp  pointer_arithmetic.h  references.cpp  references.h  test_array_decay.cpp  test_function_pointers.cpp  test_pointer_arithmetic.cpp  test_references.cpp
koans/1_5_functions_overloading/: CMakeLists.txt  default_arguments.cpp  default_arguments.h  extern_c_linkage.cpp  extern_c_linkage.h  inline_functions.cpp  inline_functions.h  name_mangling.cpp  name_mangling.h  overload_resolution.cpp  overload_resolution.h  static_dynamic_linkage.cpp  static_dynamic_linkage.h  test_default_arguments.cpp  test_extern_c_linkage.cpp  test_inline_functions.cpp  test_name_mangling.cpp  test_overload_resolution.cpp  test_static_dynamic_linkage.cpp
